[tool.poetry]
name = "eccenca-toolkit"
version = "0.0.0"
description = ""
authors = ["Ranga Reddy Nukala <sairangareddy22@gmail.com>"]
readme = "README.md"
packages = [{include = "eccenca_toolkit"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.0.0"
pytest-memray = "^1.3.0"
black = "^22.1.0"
bandit = "^1.7.2"
pylint-junit = "^0.3.2"
safety = "^1.10.3"
genbadge = "^1.0.6"
flake8-formatter-junit-xml = "^0.0.6"
typed-ast = "^1.5.2"
mypy = "^0.982"
coverage = "^6.3.2"
defusedxml = "^0.7.1"
wheel = "^0.38.3"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
dirty = true

[tool.pylint.MASTER]
load-plugins="pylint_junit"

[tool.pylint.General]
ignore = "version.py"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = "fixme"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "R0913, R0801"  # C0330, C0326,

[tool.pylint.format]
max-line-length = "88"
min-similarity-lines=10

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""
